# Bringup-EE194

./: .gitignore  export_chipyard.sh  notes.md
FA23_Bringup_FPGA/: .gitattributes  README.md
FA23_Bringup_FPGA/UART-TL_bringup/: .Agilex_SOM.qsf.swp  .gitignore  Agilex_SOM.htm  Agilex_SOM.qsf  Agilex_SOM.v  Agilex_SOM_assignment_defaults.qdf  Agilex_SOM_planned_save_view.txt  Agilex_SOM_synthesized_save_view.txt  DDR4.ip  DDR4_Cal.ip  DDR4_EMIF.ip  bringup.v  memory.qsys  memory.qsys.legacy  platform.qsys  platform.qsys.legacy  reset_release.ip  signaltap.ip  signaltap.stp
FA23_Bringup_FPGA/bearlyml/: Agilex_SOM.qpf  Agilex_SOM.sdc
FA23_Bringup_FPGA/bringup/: Agilex_SOM.v
Lab1-Embedded/: README.md
jtag_debugging/: jtag_test.py
python-uart-tsi/: README.md
sp23-chips/: .gitignore  .gitlab-ci.yml  .gitmodules  README.md  build.sbt  common.mk  one-time-fix.sh  variables.mk  vcs.mk
sp23-chips/vlsi/hammer-bump-plugin/: README.md  project-driver  pyproject.toml  run_scripts.sh
sp23-chips/vlsi/hammer-bump-plugin/def/: bearly.def
sp23-chips/vlsi/hammer-bump-plugin/pdks/: intech22-bwrc.yml
sp23-chips/vlsi/hammer-bump-plugin/scripts/src/: BearlyUtilDriver.py  BumpInfo.py  BumpUtils.py  GenUtils.py  GenerateGmbDefUcb.py  IOUtils.py  IntelBumpUtil.py  IntelConstants.py  IntelIOUtils.py  RoboChipUtilDriver.py  binder_table_gen.py  finishing_2x2.tcl
sp23-chips/vlsi/hammer-bump-plugin/scripts/tests/: test_BumpUtils.py
sp23-chips/vlsi/hammer-bump-plugin/src/main/: io_ring.sv  simple.sv
sp23-chips/vlsi/hammer-bump-plugin/src/test/: simple_tb.sv
(+1775 files in other folders)
